<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="biter_names">
        <item>Classics</item>
        <item>Definitions</item>
        <item>English</item>
        <item>Fomenko</item>
        <item>Omar Hayam</item>
        <item>Ezhi Lec</item>
        <item>Love</item>
        <item>Great mathematics</item>
        <item>Merphi</item>
        <item>Motivation</item>
        <item>Proverbs</item>
        <item>Sayings</item>
        <item>Prutkov</item>
        <item>Seneka</item>
    </string-array>

    <string-array name="empty_array"/>

    <string name="app_name">Watermelon Quotes</string>

    <string name="widget_name">Watermelon</string>

    <string name="settings">Settings</string>
    <string name="preinstalled">Preinstalled quotes</string>
    <string name="external_storage">External storage quotes</string>
    <string name="no_quotes_installed">No quotes installed</string>
    <string name="appearance">Appearance</string>
    <string name="background_color">Background color</string>
    <string name="text_color">Text color</string>
    <string name="color_is">Color is: %1$s</string>
    <string name="put_quotes">Put your quotes into %1$s</string>
    <string name="no_external_storage">No external storage found</string>
    <string name="requires_external">This option requires external storage</string>
    <string name="select_quotes_title">Please select source</string>
    <string name="select_quotes">Please select at least one quotes source</string>
    <string name="installed_quotes">Installed demo quotes</string>
    <string name="found_quotes">Found %1$d quote(s)</string>
    <string name="howto_install">To install widget goto widgets and drag and drop watermelon widget into your screen.</string>

    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>

    <string name="pref_background">Background color</string>
    <string name="pref_foreground">Text color</string>

    <!--  Quotes -->
    <string name="en_bible">English Bible</string>
    <string name="en_bible_sum">Quotes from KJV English Bible</string>

    <string name="ru_bible">Russian Bible</string>
    <string name="ru_bible_sum">Quotes from RST Russian Bible</string>

    <string name="cn_bible">Chinese Bible</string>
    <string name="cn_bible_sum">Quotes from CNV Chinese Bible</string>

    <string name="ru_biter">Russian by Biter</string>
    <string name="ru_biter_sum">Different types of quotes in Russian</string>

</resources>
